--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,25 @@
 @import "tailwindcss";
+@plugin "tailwind-scrollbar";
 
 @layer utilities {
   @keyframes fade-in {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
   }
 
   @keyframes fade-out {
-    from { opacity: 1; }
-    to { opacity: 0; }
+    from {
+      opacity: 1;
+    }
+
+    to {
+      opacity: 0;
+    }
   }
 
   .fade-in {
@@ -27,4 +38,3 @@
 ::view-transition-new(root) {
   animation: fade-in 0.5s ease-in-out;
 }
-
